RESOLVED FIXED47674
[GTK] fix compilation warnings in imported libsoup code
https://bugs.webkit.org/show_bug.cgi?id=47674
Summary [GTK] fix compilation warnings in imported libsoup code
Sergio Villar Senin
Reported 2010-10-14 09:52:43 PDT
The new SoupURILoader loader stuff issues some warnings at compile time ../../WebCore/platform/network/soup/cache/soup-directory-input-stream.c:114: warning: comparison between signed and unsigned integer expressions ../../WebCore/platform/network/soup/cache/soup-directory-input-stream.c:127: warning: comparison between signed and unsigned integer expressions ../../WebCore/platform/network/soup/cache/soup-request-data.c:82: warning: comparison between signed and unsigned integer expressions ../../WebCore/platform/network/soup/cache/soup-request-data.c:82: warning: signed and unsigned type in conditional expression ../../WebCore/platform/network/soup/cache/webkit/soup-cache.c:271: warning: signed and unsigned type in conditional expression ../../WebCore/platform/network/soup/cache/webkit/soup-cache.c:1347: warning: comparison between signed and unsigned integer expressions ../../WebCore/platform/network/soup/cache/webkit/soup-cache.c:1366: warning: comparison between signed and unsigned integer expressions
Attachments
Fixes for the warnings (5.29 KB, patch)
2010-10-14 11:01 PDT, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2010-10-14 11:01:51 PDT
Created attachment 70751 [details] Fixes for the warnings
Martin Robinson
Comment 2 2010-10-14 16:06:33 PDT
Comment on attachment 70751 [details] Fixes for the warnings Great. Thanks.
WebKit Commit Bot
Comment 3 2010-10-14 16:25:03 PDT
Comment on attachment 70751 [details] Fixes for the warnings Clearing flags on attachment: 70751 Committed r69821: <http://trac.webkit.org/changeset/69821>
WebKit Commit Bot
Comment 4 2010-10-14 16:25:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.