2010-10-14  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Martin Robinson.

        [GTK] fix compilation warnings in imported libsoup code
        https://bugs.webkit.org/show_bug.cgi?id=47674

        Fixed some warnings caused by comparisons between signed and
        unsigned integer expressions

        * platform/network/soup/cache/soup-directory-input-stream.c:
        (webkit_soup_directory_input_stream_read):
        * platform/network/soup/cache/soup-request-data.c:
        (webkit_soup_request_data_send):
        * platform/network/soup/cache/soup-request-file.c:
        (webkit_soup_request_file_ensure_file):
        * platform/network/soup/cache/webkit/soup-cache.c:
        (webkit_soup_cache_entry_is_fresh_enough):
        (webkit_soup_cache_has_response):

Canonical link: https://commits.webkit.org/60403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69821 268f45cc-cd09-0410-ab3c-d52691b4dbfc